--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "react-slider": "^1.3.1",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.2"
   },
